--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,33 +1,82 @@
-name: Generate pacman animation
+# name: Generate pacman animation
+
+# on:
+#   schedule: # execute every 12 hours
+#     - cron: "* */12 * * *"
+
+#   workflow_dispatch:
+
+#   push:
+#     branches:
+#     - main
+
+# jobs:
+#   generate:
+#     permissions:
+#       contents: write
+#     runs-on: ubuntu-latest
+#     timeout-minutes: 5
+
+#     steps:
+#       - name: generate pacman-contribution-graph.svg
+#         uses: abozanona/pacman-contribution-graph@main
+#         with:
+#           github_user_name: ${{ github.repository_owner }}
+
+
+#       - name: push pacman-contribution-graph.svg to the output branch
+#         uses: crazy-max/ghaction-github-pages@v3.1.0
+#         with:
+#           target_branch: output
+#           build_dir: dist
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+
+
+
+
+
+
+
+name: Generate Pacman Contribution Graph
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
-  workflow_dispatch:
-
   push:
     branches:
-    - main
+      - main
+  workflow_dispatch:
 
 jobs:
-  generate:
-    permissions:
-      contents: write
+  pacman:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
-      - name: generate pacman-contribution-graph.svg
-        uses: abozanona/pacman-contribution-graph@main
-        with:
-          github_user_name: ${{ github.repository_owner }}
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: push pacman-contribution-graph.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Install pacman-contribution-graph
+      run: npm install -g pacman-contribution-graph
+
+    - name: Generate Pacman Contribution Graph (light)
+      run: |
+        pacman-contribution-graph --output pacman-contribution-graph.svg --theme light
+
+    - name: Generate Pacman Contribution Graph (dark)
+      run: |
+        pacman-contribution-graph --output pacman-contribution-graph-dark.svg --theme dark
+
+    - name: Push generated SVGs to output branch
+      uses: crazy-max/ghaction-github-pages@v3.1.0
+      with:
+        target_branch: output
+        build_dir: .
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
